# pyblinkstick

./: .git-blame-ignore-revs  .gitignore  pyproject.toml
.github/workflows/: black.yml  mypy.yml  pytest.yml
examples/: random_color.py
src/blinkstick/: __init__.py  blinkstick.py  colors.py  constants.py  core.py  decorators.py  enums.py  exceptions.py  main.py  models.py  utilities.py
src/blinkstick/animation/: __init__.py  animator.py  base.py  blink.py  morph.py  pulse.py
src/blinkstick/backends/: __init__.py  base.py  unix_like.py  win32.py
src/blinkstick/clients/: __init__.py  base.py  blinkstick.py  blinkstick_flex.py  blinkstick_nano.py  blinkstick_pro.py  blinkstick_square.py  blinkstick_strip.py  utils.py
src/blinkstick/devices/: __init__.py  device.py
src/scripts/: main.py
tests/: conftest.py  test_animator.py  test_blinkstick.py  test_blinkstick_matrix.py  test_blinkstick_pro_matrix.py
tests/clients/: blinkstick.py  test_blinkstick.py  test_blinkstick_matrix.py  test_blinkstick_pro_matrix.py
tests/colors/: conftest.py  test_colors.py
tests/devices/: test_blinkstick_device.py
tests/models/: serial_number.py
tests/utilities/: test_string_to_info_block.py
